--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <link rel="stylesheet" href="style.css">        
     </head>
     <body>
-        <h1>AluraBook</h1>
+        <header class="cabeçalho">
+            <div class="container">
+                <span class="cabeçalho__menu-amburguer container__imagem"></span>
+                <img class="container__imagem" src="img/Logo.svg" alt="Logo da AluraBooks">
+            </div>
+            <div class="container">            
+                <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <a href="#"><img class="container__imagem" src="img/Sacola.svg" alt="Carrinho de compras"></a>
+                <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="Meu perfil"></a>
+            </div>
+        </header>
     </body>
 </html>
