--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>AluraBooks</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">        
@@ -10,8 +10,29 @@
     <body>
         <header class="cabeçalho">
             <div class="container">
-                <span class="cabeçalho__menu-amburguer container__imagem"></span>
-                <img class="container__imagem" src="img/Logo.svg" alt="Logo da AluraBooks">
+                <input type="checkbox" id="menu" class="container__botao">
+                <label for="menu">
+                    <span class="cabeçalho__menu-amburguer container__imagem"></span>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__titulo">Categorias</li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Programação</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Front-end</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Infraestrutura</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Business</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Design & UX</a>
+                    </li>
+                </ul>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
             </div>
             <div class="container">            
                 <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="Meus favoritos"></a>
