--- a/index.html
+++ b/index.html
@@ -195,7 +195,17 @@
             </ul>
         </section>
 
-        
+        <section class="contato">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+        </section>
+
+        <hr />                                                  <!-- Utilizado para fazer o risco horizontal utilizado como divisoria do footer -->
+
+        <footer class="rodape">
+            <h2 class="rodape__titulo">Grupo Alura</h2>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
        <!-- dados javascript retirado do site -->
