--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Krona+One&family=Montserrat:wght@100;400;600&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>        <!--Swiper é plugin/biblioteca que pode ser importrado atraves de CDN foi utilizado na contrução do carreção de seção 2 -->
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Josefin+Sans:wght@400;700&family=Krona+One&family=Montserrat:wght@100;400;600&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">        
     </head>
     <body>
@@ -34,12 +35,20 @@
                     </li>
                     <li class="lista-menu__item">
                         <a href="#" class="lista-menu__link">Design & UX</a>
-                    </li>
+                    </li>                    
                 </ul>
                 <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+                <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
             </div>
+
+            <ul class="opçoes">
+                <li class="opçoes__item">CATEGORIAS</li>
+                <li class="opçoes__item"><a href="#" class="opçoes__link">FAVORITOS</a></li>            
+                <li class="opçoes__item"><a href="#" class="opçoes__link">MINHA ESTANTE</a></li>               
+            </ul>
+
             <div class="container">            
-                <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <a href="#"><img class="container__imagem container__imagem-transparente" src="img/Favoritos.svg" alt="Meus favoritos"></a>
                 <a href="#"><img class="container__imagem" src="img/Sacola.svg" alt="Carrinho de compras"></a>
                 <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="Meu perfil"></a>
             </div>
