Lista de categorias

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <label for="menu">
                     <span class="cabeçalho__menu-amburguer container__imagem"></span>
                 </label>
-                <ul class="lista-menu">
+                <ul class="lista-menu">                    
                     <li class="lista-menu__titulo">Categorias</li>
                     <li class="lista-menu__item">
                         <a href="#" class="lista-menu__link">Programação</a>
@@ -42,7 +42,29 @@
             </div>
 
             <ul class="opçoes">
-                <li class="opçoes__item">CATEGORIAS</li>
+                <input type="checkbox" id = "opçoes-menu" class="opçoes__botao">
+                <label for="opçoes-menu">
+                    <li class="opçoes__item">CATEGORIAS</li>
+                </label>
+
+                <ul class="lista-menu">                                       
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Programação</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Front-end</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Infraestrutura</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Business</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Design & UX</a>
+                    </li>                    
+                </ul>
+
                 <li class="opçoes__item"><a href="#" class="opçoes__link">FAVORITOS</a></li>            
                 <li class="opçoes__item"><a href="#" class="opçoes__link">MINHA ESTANTE</a></li>               
             </ul>
