--- a/index.html
+++ b/index.html
@@ -70,9 +70,17 @@
             </ul>
 
             <div class="container">            
-                <a href="#"><img class="container__imagem container__imagem-transparente" src="img/Favoritos.svg" alt="Meus favoritos"></a>
-                <a href="#"><img class="container__imagem" src="img/Sacola.svg" alt="Carrinho de compras"></a>
-                <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="Meu perfil"></a>
+                <a href="#">
+                    <img class="container__imagem container__imagem-transparente" src="img/Favoritos.svg" alt="Meus favoritos">                    
+                </a>
+                <a class="container__link" href="#">
+                    <img class="container__imagem" src="img/Sacola.svg" alt="Carrinho de compras">
+                    <p class="container__texto">Minha sacola</p>
+                </a>
+                <a class="container__link" href="#">
+                    <img class="container__imagem" src="img/Usuario.svg" alt="Meu perfil">
+                    <p class="container__texto">Meu perfil</p>
+                </a>
             </div>
         </header>
         <section class="banner">
