--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="cabeçalho">
             <div class="container">
                 <input type="checkbox" id="menu" class="container__botao">
-                <label for="menu">
+                <label for="menu" class="container__rotulo">
                     <span class="cabeçalho__menu-amburguer container__imagem"></span>
                 </label>
                 <ul class="lista-menu">                    
@@ -43,7 +43,7 @@
 
             <ul class="opçoes">
                 <input type="checkbox" id = "opçoes-menu" class="opçoes__botao">
-                <label for="opçoes-menu">
+                <label for="opçoes-menu" class="opçoes__rotulo">
                     <li class="opçoes__item">CATEGORIAS</li>
                 </label>
 
